...
export type RootStackParamList = {
  Auth: NavigatorScreenParams<AuthStackParamList>;
  Main: NavigatorScreenParams<MainTabParamList>;
};

export type AuthStackParamList = {
  Welcome: undefined;
  StaffLogin: undefined;
  ManagerLogin: undefined;
};

export type MainTabParamList = {
  Dashboard: NavigatorScreenParams<DashboardStackParamList>;
  Orders: NavigatorScreenParams<OrdersStackParamList>;
  Kitchen: NavigatorScreenParams<KitchenStackParamList>;
  Settings: undefined;
};

export type DashboardStackParamList = {
  Overview: undefined;
  OrdersDashboard: undefined;
  TablesDashboard: undefined;
...
